# Blog_writing_Agent-

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml  streamlit_app.py
blogs/: 20260212_210726_About_ClaudBot.md  20260212_210835_Top_5_news_on_LLM_.md  20260212_211150_importance_of_Docker_and_kubernetes.md  20260212_211231_importance_of_docker_and_kubernetes.md  20260212_211416_Importance_of_Git_and_Github_.md
markdown_files/: Blog writing using AI agents.md  Designing and Optimizing MCP Servers.md  Recent top 5 AI news.md  State of Multimodal LLMs in 2026.md  Understanding Attention Mechanisms.md  Understanding Claudbot.md  agentic_rag.md  self_attention_in_deep_learning.md  understanding_agentic_rag.md  understanding_self-attention_in_deep_learning.md
notebooks/: 1_bwa_basic.ipynb  2_bwa_improved_prompts.ipynb  3_bwa_research.ipynb  Data Science Applications (DSA) in Data Science.md
